Fix video width on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@ p {
   max-width: 100%;
   line-height: 1.7em;
 }
-img {
+img, video {
   max-width: 100%;
 }
 time {
